RESOLVED FIXED40037
[chromium] Scroll position is lost when hitting the back button while compositing on the gpu
https://bugs.webkit.org/show_bug.cgi?id=40037
Summary [chromium] Scroll position is lost when hitting the back button while composi...
Vangelis Kokkevis
Reported 2010-06-01 18:55:42 PDT
Steps to reproduce: 1. Go to a (long) page that triggers accelerated compositing 2. Scroll down the page 3. Navigate to a new page from the same tab 4. Hit the back button in the browser to go back to the original page Composited elements now appear in the wrong spot and scrolling the page doesn't update its contents correctly.
Attachments
Proposed patch (2.97 KB, patch)
2010-06-02 18:28 PDT, Vangelis Kokkevis
no flags
Proposed patch (2.96 KB, patch)
2010-06-02 18:30 PDT, Vangelis Kokkevis
no flags
Proposed patch (1.81 KB, patch)
2010-06-03 19:22 PDT, Vangelis Kokkevis
no flags
Vangelis Kokkevis
Comment 1 2010-06-02 18:28:22 PDT
Created attachment 57723 [details] Proposed patch
Vangelis Kokkevis
Comment 2 2010-06-02 18:30:38 PDT
Created attachment 57724 [details] Proposed patch
Vangelis Kokkevis
Comment 3 2010-06-03 19:22:10 PDT
Created attachment 57842 [details] Proposed patch A simpler solution that's actually more reliable.
Dimitri Glazkov (Google)
Comment 4 2010-06-03 19:32:57 PDT
Comment on attachment 57842 [details] Proposed patch ok.
WebKit Commit Bot
Comment 5 2010-06-04 05:05:14 PDT
Comment on attachment 57842 [details] Proposed patch Clearing flags on attachment: 57842 Committed r60676: <http://trac.webkit.org/changeset/60676>
WebKit Commit Bot
Comment 6 2010-06-04 05:05:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.