2010-06-04  Vangelis Kokkevis  <vangelis@chromium.org>

Reviewed by Dimitri Glazkov.

        [chromium] Fix scrolling bug with pages using accelerated compositing.
        https://bugs.webkit.org/show_bug.cgi?id=40037

        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::LayerRendererChromium):
        (WebCore::LayerRendererChromium::drawLayers):

Canonical link: https://commits.webkit.org/51700@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60676 268f45cc-cd09-0410-ab3c-d52691b4dbfc